force-app/main/default/objects/Contract/fields/Annual_Volume2__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume2__c</fullName>
    <label>Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>