force-app/main/default/objects/Contract/fields/Existing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field part of signature information section</description>
    <label>Existing Contract</label>
    <type>Checkbox</type>
</CustomField>