force-app/main/default/objects/Contract/fields/Files_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Files_uploaded__c</fullName>
    <formula>Number_of_files_uploaded__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Files uploaded</label>
    <type>Checkbox</type>
</CustomField>