force-app/main/default/objects/Contract/fields/Moulds_Agreement2__c.field-meta.xml
<CustomField>
    <fullName>Moulds_Agreement2__c</fullName>
    <label>Moulds Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cliente 100 % (100% Customer)</fullName>
            </value>
            <value>
                <fullName>Sobre precio modelo (In the product price)</fullName>
            </value>
            <value>
                <fullName>Sobre valor residual (Only remaining product)</fullName>
            </value>
            <value>
                <fullName>Vidrala 100% (100 % Vidrala)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>