force-app/main/default/objects/Contract/fields/Moulds_price__c.field-meta.xml
<CustomField>
    <fullName>Moulds_price__c</fullName>
    <label>Moulds price (000)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>