force-app/main/default/objects/Contract/fields/Moulds_Price_In_Product__c.field-meta.xml
<CustomField>
    <fullName>Moulds_Price_In_Product__c</fullName>
    <label>Moulds Price In Product (000)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>