force-app/main/default/objects/Contract/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Mandatory when &quot;In the product price&quot; option is selected</description>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>