force-app/main/default/objects/Contract/fields/Porcentage_consumed__c.field-meta.xml
<CustomField>
    <fullName>Porcentage_consumed__c</fullName>
    <formula>TAM_mes_actual__c / Annual_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>