force-app/main/default/objects/Contract/fields/TAM_mes_actual__c.field-meta.xml
<CustomField>
    <fullName>TAM_mes_actual__c</fullName>
    <description>Volumen TAM</description>
    <inlineHelpText>Este volumen se actualiza al mes.</inlineHelpText>
    <label>TAM mes actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>