force-app/main/default/objects/Contract/fields/Tons_Units__c.field-meta.xml
<CustomField>
    <fullName>Tons_Units__c</fullName>
    <label>Tons/Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tons</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>