force-app/main/default/objects/Contract/fields/Total_Volume_To_Amotise_Mould__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume_To_Amotise_Mould__c</fullName>
    <formula>(Moulds_price__c / Moulds_Price_In_Product__c) * 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Units</inlineHelpText>
    <label>Total Volume To Amotise Mould</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>