force-app/main/default/objects/Contract/fields/Volume_Allowance_2nd_year__c.field-meta.xml
<CustomField>
    <fullName>Volume_Allowance_2nd_year__c</fullName>
    <description>En caso de contratos de más de 1 años de vigencia, indicar el volumen negociado para el 2 año de vigencia</description>
    <inlineHelpText>En caso de contratos de más de 1 años de vigencia, indicar el volumen negociado para el 2 año de vigencia</inlineHelpText>
    <label>Volume Allowance 2nd year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>