force-app/main/default/objects/Contract/fields/Volume_Allowance_4th_year__c.field-meta.xml
<CustomField>
    <fullName>Volume_Allowance_4th_year__c</fullName>
    <description>En caso de contratos de más de 3 años de vigencia, indicar el volumen negociado para el 4 año de vigencia</description>
    <inlineHelpText>En caso de contratos de más de 3 años de vigencia, indicar el volumen negociado para el 4 año de vigencia</inlineHelpText>
    <label>Volume Allowance 4th year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>