force-app/main/default/objects/Contract/fields/Volume_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Volume_Allowance__c</fullName>
    <description>Indicar el volumen acordado para el año de vigencia del contrato, o en caso de tener una vigencia mayor, el volumen correspondiente al primer año</description>
    <inlineHelpText>Indicar el volumen acordado para el año de vigencia del contrato, o en caso de tener una vigencia mayor, el volumen correspondiente al primer año</inlineHelpText>
    <label>Volume Allowance 1st year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>