force-app/main/default/objects/Contract/recordTypes/Contract_Encirc.recordType-meta.xml
<RecordType>
    <fullName>Contract_Encirc</fullName>
    <active>true</active>
    <description>Encirc Contract</description>
    <label>Contract (Encirc)</label>
</RecordType>