force-app/main/default/objects/Contract/recordTypes/Customer_Annual.recordType-meta.xml
<RecordType>
    <fullName>Customer_Annual</fullName>
    <active>true</active>
    <description>Large/global - includes all legal agreements</description>
    <label>Customer Annual</label>
</RecordType>