force-app/main/default/objects/Contract/recordTypes/Specific_Product.recordType-meta.xml
<RecordType>
    <fullName>Specific_Product</fullName>
    <active>true</active>
    <description>Small - Contract for Specific Product, Bespoke Bottle</description>
    <label>Specific Product</label>
</RecordType>