force-app/main/default/objects/Contract/listViews/All_Contract_2020.listView-meta.xml
<ListView>
    <fullName>All_Contract_2020</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2019</value>
    </filters>
    <label>All Contracts 01.01.2020 Onwards</label>
</ListView>