force-app/main/default/objects/Contract/listViews/All_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org_SAP_Code__c</field>
        <operation>equals</operation>
        <value>EN60</value>
    </filters>
    <label>All Contracts - Encirc</label>
</ListView>