force-app/main/default/objects/Contract/listViews/All_Contracts_01_01_2021_Onwards.listView-meta.xml
<ListView>
    <fullName>All_Contracts_01_01_2021_Onwards</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2020</value>
    </filters>
    <label>All Contracts 01.01.2021 Onwards</label>
</ListView>